updated html of inconsistancies, organized html and css files, made webpage way more responsive for smaller devices and stoped all screen tearing on images/text on smaller sizes.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,6 +3,13 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+/* header elements*/
+
+.center1 {
+    text-align: center;
+
+}
+
 .nav {
 
     position: fixed;
@@ -11,62 +18,7 @@
     margin: 10px;
     width: 100%;
     padding: 2px;
-}
-
-.center1 {
-    text-align: center;
-
-}
-
-.container1 {
-    font-size: 75%;
-    font-weight: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
-}
-
-.containter3 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    position: relative;
-    border: 1px solid;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    overflow: auto;
-}
-
-.boxforalbert {
-    display: flex;
-    flex: 1 0 auto;
-    margin: 15px;
-    padding: 10px;
-    justify-content: center;
-    font-size: 140%;
-    position: relative;
-    white-space: nowrap;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.Profilepic {
-    width: 45%;
-}
-
-.Horiseonimg {
-    display: flex;
-    justify-content: center;
-    margin: 5px;
-    border: #8b0303;
-    width: 100%;
-}
-
-.Horiseonimg:hover {
-    opacity: 0.5;
-    cursor: pointer;
+    
 }
 
 .listhead {
@@ -79,20 +31,108 @@
     flex: 1 0 auto;
 }
 
-.projects {
+.projectsnavbar {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+/*end header elements*/
+
+/*container 1 elements*/
+.container1 {
+    font-size: 100%;
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.Headerstyling {
     text-align: center;
     font-size: 330%;
     font-family: 'Times New Roman', Times, serif;
     border: 1px solid;
-
 }
+
+.boxforalbert {
+    display: flex;
+    justify-content: center;
+    font-size: 140%;
+    position: relative;
+    padding: 10px;
+    margin: 10px;
+}
+
+.Profilepic {
+    width: 350px;
+    height: 350px;
+    padding: 15px;
+    margin: 30px;
+}
+
+.hoveraboutme {
+    width: 25%;
+    height: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+}
+
+.intboxforalbert {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+/* end of container 1 elements*/
+
+/* container2 elements*/
+
+.Horiseonimg {
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+    border: #8b0303;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+/* end container2*/
+
+/*container3 */
+
+.containter3 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
+    border: 1px solid;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: auto;
+    width: 100%;
+}
+
+.img1pr, .img2pr, .img3pr, .img4pr {
+    width: 75%;
+}
+
+/* end container3 elements*/
+
+/* footer elements*/
 
 footer {
     display: flex;
     flex: 1 0 auto;
-    flex-wrap: wrap;
     justify-content: center;
     position: relative;
+    border: #333;
+    flex-direction: column;
+    left: 40%;
 }
 
 .googlelogo {
@@ -100,12 +140,14 @@ footer {
 }
 
 .youtubelogo:first-child {
-    width: 45%;
+    width: 10%;
 }
 
 .amazonlogo:last-child {
-    width: 45%;
+    width: 10%;
 }
+
+/*end footer elements*/
 
 .img1pr:hover {
     opacity: 0.5;
@@ -138,14 +180,18 @@ footer {
     opacity: 0.5;
 }
 
-.projectsnavbar {
-    opacity: 0.8;
+.Horiseonimg:hover {
+    opacity: 0.5;
     cursor: pointer;
 }
 
 button {
     background-color: cornflowerblue;
     color: blue;
+}
+
+.Contactinfobutton {
+    width: 10%;
 }
 
 @media (max-width: 968px) {
@@ -157,14 +203,48 @@ button {
 
 @media (max-width: 968px) {
     .Profilepic {
-        width: 75%;
+        width: 350px;
+        height: 350px;
+        padding: 15px;
+        margin: 30px;
     }
 }
 
 @media (max-width: 968px) {
     .Horiseonimg {
-        width: 100%;
+        width: 50%;
     }
+}
+
+@media (max-width: 968px) {
+    .img1pr {
+        width: 50%;
+    }
+}
+
+@media (max-width: 968px) {
+    .img2pr{
+       width: 50%;
+   }
+}
+
+@media (max-width: 968px) {
+    .img3pr{
+       width: 50%;
+   }
+}
+
+@media (max-width: 968px) {
+    .img4pr{
+       width: 50%;
+   }
+}
+
+@media (max-width: 768px) {
+    .container1 {
+        font-size: 95%;
+    }
+
 }
 
 @media (max-width: 768px) {
@@ -174,13 +254,14 @@ button {
         color: #333;
         padding: 20px;
         display: inline;
-        font-size: ;
-    }
+       }
 }
 
-@media (max-width: 768px) {
-    .container1 {
-        font-size: 95%;
+@media (max-width: 576px) {
+    .Profilepic {
+        width: 320px;
+        height: 320px;
+        padding: 10px;
+        margin: 25px;
     }
-
 }
